# meeting-system

./: .gitignore  AGENTS.md  PLAN.md  README.md  api_interfaces.md  api_interfaces_part2.md  audit_report_0412.md  client_design.md  deployment_guide.md  development_flow.md  development_progress.md  module_progress_audit.md  phase_task_breakdown.md  server_design.md
meeting-server/sfu/: CMakeLists.txt  Dockerfile  main.cpp
meeting-server/sfu/bwe/: BandwidthEstimator.cpp  BandwidthEstimator.h
meeting-server/sfu/proto/pb/: sfu_rpc.pb.cc  sfu_rpc.pb.h  signaling.pb.cc  signaling.pb.h
meeting-server/sfu/room/: Publisher.cpp  Publisher.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  Subscriber.cpp  Subscriber.h
meeting-server/sfu/rtp/: NackBuffer.cpp  NackBuffer.h  RtcpHandler.cpp  RtcpHandler.h  RtpParser.cpp  RtpParser.h  RtpRouter.cpp  RtpRouter.h
meeting-server/sfu/server/: DtlsContext.cpp  DtlsContext.h  DtlsTransport.cpp  DtlsTransport.h  IceLiteSession.h  MediaIngress.cpp  MediaIngress.h  ParticipantTransport.h  RpcProtocol.cpp  RpcProtocol.h  RpcServer.cpp  RpcServer.h  RpcService.cpp  RpcService.h  SfuDaemon.cpp  SfuDaemon.h  SrtpSession.cpp  SrtpSession.h  TransportRegistry.h  UdpServer.cpp  UdpServer.h
meeting-server/sfu/tests/: sfu_core_tests.cpp  sfu_daemon_tests.cpp  sfu_rpc_server_tests.cpp
plasma-hawking/: CMakeLists.txt  README.md
plasma-hawking/proto/: media.proto  signaling.proto
plasma-hawking/proto/pb/: signaling.pb.cc  signaling.pb.h
plasma-hawking/qml/: Main.qml
plasma-hawking/qml/components/: ChatPanel.qml  CreateMeetingDialog.qml  ParticipantPanel.qml  TitleBar.qml  ToolBar.qml  VideoGrid.qml  VideoTile.qml
plasma-hawking/qml/dialogs/: JoinMeetingDialog.qml  LoginDialog.qml
plasma-hawking/qml/pages/: HomePage.qml  MeetingRoom.qml  SettingsPage.qml
plasma-hawking/shaders/: nv12_to_rgb.frag  nv12_to_rgb.vert
plasma-hawking/src/: main.cpp
plasma-hawking/src/app/: AppStateMachine.cpp  AppStateMachine.h  ChatMessageListModel.cpp  ChatMessageListModel.h  EventBus.cpp  EventBus.h  MediaSessionManager.cpp  MediaSessionManager.h  MeetingController.cpp  MeetingController.h  ParticipantListModel.cpp  ParticipantListModel.h  RuntimeSmokeDriver.cpp  RuntimeSmokeDriver.h  UserManager.cpp  UserManager.h
plasma-hawking/src/av/: FFmpegUtils.h  VideoPipelineProfile.h
plasma-hawking/src/av/capture/: AudioCapture.cpp  AudioCapture.h  CameraCapture.cpp  CameraCapture.h  ICaptureDevice.h  ScreenCapture.cpp  ScreenCapture.h  WindowsD3D11CameraCapture.cpp  WindowsD3D11CameraCapture.h
plasma-hawking/src/av/codec/: AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  IDecoder.h  IEncoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
plasma-hawking/src/av/process/: AcousticEchoCanceller.cpp  AcousticEchoCanceller.h  AutoGainControl.cpp  AutoGainControl.h  NoiseSuppressor.cpp  NoiseSuppressor.h
plasma-hawking/src/av/render/: AudioPlayer.cpp  AudioPlayer.h  NV12Shader.cpp  NV12Shader.h  VideoFrameStore.cpp  VideoFrameStore.h  VideoRenderer.cpp  VideoRenderer.h
plasma-hawking/src/av/session/: AudioCallSession.cpp  AudioCallSession.h  CameraFrameRelay.cpp  CameraFrameRelay.h  ScreenShareSession.cpp  ScreenShareSession.h  ScreenShareSessionCamera.cpp  ScreenShareSessionTransport.cpp  VideoBwePolicy.cpp  VideoBwePolicy.h  VideoRecvConsumePipeline.cpp  VideoRecvConsumePipeline.h  VideoRecvErrorPipeline.cpp  VideoRecvErrorPipeline.h  VideoRecvFrameDispatchPipeline.cpp  VideoRecvFrameDispatchPipeline.h  VideoRecvIngressPipeline.cpp  VideoRecvIngressPipeline.h  VideoRecvKeyFramePipeline.cpp  VideoRecvKeyFramePipeline.h  VideoRecvPipeline.cpp  VideoRecvPipeline.h  VideoRecvRtcpPipeline.cpp  VideoRecvRtcpPipeline.h  VideoRecvTelemetryPipeline.cpp  VideoRecvTelemetryPipeline.h  VideoRtcpActionPipeline.cpp  VideoRtcpActionPipeline.h  VideoRtcpFeedbackDispatchPipeline.cpp  VideoRtcpFeedbackDispatchPipeline.h  VideoRtcpFeedbackPipeline.cpp  VideoRtcpFeedbackPipeline.h  VideoSendControlActions.cpp  VideoSendControlActions.h  VideoSendFrameRingBuffer.cpp  VideoSendFrameRingBuffer.h  VideoSendLoopPipeline.cpp  VideoSendLoopPipeline.h  VideoSendPipeline.cpp  VideoSendPipeline.h  (+12 more)
plasma-hawking/src/av/sync/: AVSync.cpp  AVSync.h
plasma-hawking/src/common/: FFmpegUtils.h  RingBuffer.h
plasma-hawking/src/net/: INetworkTransport.h
plasma-hawking/src/net/ice/: StunClient.cpp  StunClient.h  TurnClient.cpp  TurnClient.h
plasma-hawking/src/net/media/: BandwidthEstimator.cpp  BandwidthEstimator.h  DtlsTransportClient.cpp  DtlsTransportClient.h  H264RtpPayload.cpp  H264RtpPayload.h  JitterBuffer.cpp  JitterBuffer.h  RTCPHandler.cpp  RTCPHandler.h  RTPReceiver.cpp  RTPReceiver.h  RTPSender.cpp  RTPSender.h  SocketAddressUtils.h  UdpPeerSocket.h
plasma-hawking/src/security/: CryptoUtils.cpp  CryptoUtils.h  SRTPContext.cpp  SRTPContext.h  TokenManager.cpp  TokenManager.h
plasma-hawking/src/storage/: CallLogRepository.cpp  CallLogRepository.h  DatabaseManager.cpp  DatabaseManager.h  MeetingRepository.cpp  MeetingRepository.h  MessageRepository.cpp  MessageRepository.h  SettingsRepository.cpp  SettingsRepository.h  UserRepository.cpp  UserRepository.h
plasma-hawking/tests/: AudioCodecSmoke.cpp  test_audio_process.cpp  test_audio_process_quality.cpp  test_av_sync.cpp  test_camera_capture_smoke.cpp  test_database.cpp  test_dtls_transport_client.cpp  test_event_bus.cpp  test_h264_rtp_payload.cpp  test_jitter_buffer.cpp  test_media_session_manager.cpp  test_meeting_client_fanout_process_smoke.cpp  test_meeting_client_process_smoke.cpp  test_meeting_controller_mute_all.cpp  test_meeting_runtime_smoke.cpp  test_protocol.cpp  test_ring_buffer.cpp  test_screen_capture_portal_smoke.cpp  test_screen_share_session.cpp  test_screen_share_session_camera_smoke.cpp  test_security_utils.cpp  test_signaling_client_ssrc.cpp  test_stun_turn_client.cpp  test_video_bwe_policy.cpp  test_video_pipeline_profile.cpp  test_video_recv_pipeline_multistream.cpp  test_video_send_frame_ring_buffer.cpp  test_video_send_pipeline_avframe.cpp
(+109 files in other folders)
